--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div>
-        <h1>Ayrton Senna</h1>
+        <a href="https://en.wikipedia.org/wiki/Ayrton_Senna" target="blank"><h1>Ayrton Senna</h1></a>
         <br />
         <h2>A Tribute To <br />" The Greatest <br />Driver To Touch A Car"</h2>
       </div>
@@ -155,10 +155,13 @@
         Ayrton Senna<br />
         21.03.1960 - 01.05.1994
       </h5>
-      <h6>
-        Ryan Clifton<br />School Of Code<br />
-        Tribute Page
-      </h6>
+      <div class="btn">
+        <h6>
+          Ryan Clifton<br />School Of Code<br />
+          Tribute Page
+        </h6>
+        <a href="#top"><Button>Top &#8593</Button></a>
+      </div>
     </footer>
   </body>
 </html>
